--- a/standards.css
+++ b/standards.css
@@ -1,12 +1,54 @@
+body {
+  background-color: black;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
+
+
 .missionstatement {
+  color: white;
   padding-left: 2em;
   padding-right: 2em;
   padding-top: 2em;
   padding-bottom: 2em;
   font-family:Arial, Helvetica, sans-serif;
   font-weight: bold;
-  border-color: rgb(0, 255, 64);
-  border-width: 3px; 
+  border:1px solid white;
 
 
+
+}
+
+.logo {
+  width:15%;
+  border-radius: 2rem;
+  text-shadow: 2px 2px 10px white;
+}
+
+
+
+nav {
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+nav li {
+  list-style-type: none;
+  padding: 1rem;
+}
+
+
+nav a {
+  color: white;
+  text-decoration: none;
+  padding: 1rem 2rem;
 }
