--- a/standards.css
+++ b/standards.css
@@ -3,24 +3,58 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: 150%;
+
+}
 
 
+.span2 {
+  font-size: 175%;
+  
+  grid-column: span 2;
+  padding: 8rem;
+  background-image: url(images/floorplanblurredcropped.png) ;
+  border-bottom: 6px solid white;
+
+
+
+
+
+
+}
 
 
 
 .missionstatement {
   color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding-left: 2em;
   padding-right: 2em;
-  padding-top: 2em;
-  padding-bottom: 2em;
-  font-family:Arial, Helvetica, sans-serif;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  
+
+}
+.missionstatement p {
+  font-style: italic;
+}
+
+main h2 {
+  color: rgba(125, 59, 212, 0.74);
   font-weight: bold;
-  border:1px solid white;
-
-
-
-
+  font-size: 125%;
+  padding: 0.5rem;
 }
 
 .logo {
@@ -30,9 +64,6 @@ body {
   box-shadow: 2px 2px 7px black;
   border: 5px solid white;
   margin: 0 0 0rem 1rem;
-
-
-
 }
 
 
@@ -41,11 +72,11 @@ body {
 
 
 nav {
-
   text-transform: uppercase;
   font-family: Arial, Helvetica, sans-serif;
+  font-weight: 550;
+  border-bottom: 6px solid white;
 }
-
 nav ul {
   display: flex;
   justify-content: space-around;
@@ -54,27 +85,21 @@ nav ul {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
-
-
-
-
-
-
 nav li {
   list-style-type: none;
   padding: 1rem;
 }
-
-
 nav a {
   color: white;
   text-decoration: none;
   padding: 1rem 2rem;
 }
-
 nav a:hover {
   color: black;
   background-color: white;
 }
 
 
+div {
+  color: white;
+}
