--- a/standards.css
+++ b/standards.css
@@ -20,26 +20,15 @@ main {
   font-size: 175%;
   color: black;
   font-style: italic;
-
-  
-
-  
-
   grid-column: span 2;
   padding: 8rem;
   background-image: url(images/floorplanblurredcropped.png) ;
   border-bottom: 6px solid white;
-
-
-
-
-
-
 }
 
 
 
-.missionstatement {
+.columnleft {
   color: white;
   display: flex;
   flex-direction: column;
@@ -52,9 +41,26 @@ main {
   
 
 }
-.missionstatement p {
+.columnleft p {
   font-style: italic;
 }
+.columnright {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  
+
+}
+.columnright p {
+  font-style: italic;
+}
+
 
 main h2 {
   color: rgba(125, 59, 212, 0.74);
