--- a/standards.css
+++ b/standards.css
@@ -3,16 +3,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-img {
-  max-width: 100%;
-}
-
 main {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   font-family:Arial, Helvetica, sans-serif;
-  font-weight: 150%;
-
 }
 
 
@@ -25,73 +17,74 @@ main {
   background-image: url(images/floorplanblurredcropped.png) ;
   border-bottom: 6px solid white;
 }
-
-
-
-.columnleft {
-  color: white;
+.column1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-left: 2em;
-  padding-right: 2em;
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding: 2rem;
+  border: 4px solid white;
+}
+
+.column1 ul {
+  list-style: none;
+  line-height: 1.4;
   
-
-}
-.columnleft p {
-  font-style: italic;
-}
-.columnright {
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-left: 2em;
-  padding-right: 2em;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  
-
-}
-.columnright p {
-  font-style: italic;
 }
 
+.column1 a {
+  color: rgba(125, 59, 212, 0.74);
+}
 
+.column2 {
+    display: Grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1em;
+    border: 4px solid white;
+    border-bottom: 2px;
+    padding: 2rem;
+    line-height: 1.4;
+}
 main h2 {
   color: rgba(125, 59, 212, 0.74);
   font-weight: bold;
   font-size: 125%;
   padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+}
+
+main h1 {
+  color: rgba(125, 59, 212, 0.74);
+  font-weight: bold;
+  font-size: 175%;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
 }
 
 .logo {
-  width:10%;
+  max-width: 80px;
   border-radius: 2rem;
   float: left;
-  box-shadow: 2px 2px 7px black;
   border: 5px solid white;
-  margin: 0 0 0rem 1rem;
+  margin: 0.5rem 0.5rem 0.5rem 0.5rem;
 }
 
-
-
-
-
+img {
+  max-width: 100%;
+}
 
 nav {
   text-transform: uppercase;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 550;
-  border-bottom: 6px solid white;
+  border-bottom: 8px solid white;
 }
 nav ul {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   flex-wrap: wrap;
   padding-left: 2rem;
   padding-top: 2rem;
@@ -111,7 +104,15 @@ nav a:hover {
   background-color: white;
 }
 
-
 div {
   color: white;
+}
+
+footer {
+  background-color: #ffffff;
+  padding: 1rem;
+  text-align: center;
+  color: black;
+  font-size: 80%;
+  font-style: italic;
 }
