--- a/standards.css
+++ b/standards.css
@@ -1,10 +1,13 @@
 body {
-  background-color: black;
-  font-family: Arial, Helvetica, sans-serif;
+  background-image: url(images/Backround.avif);
+  line-height: 1.4;
 }
 
-main {
-  font-family:Arial, Helvetica, sans-serif;
+main { 
+   font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
 }
 
 
@@ -12,10 +15,14 @@ main {
   font-size: 175%;
   color: black;
   font-style: italic;
+  font-weight: 800;
   grid-column: span 2;
   padding: 8rem;
   background-image: url(images/floorplanblurredcropped.png) ;
-  border-bottom: 6px solid white;
+  border: 4px solid grey;
+  border-bottom: 0px;
+  display: flex;
+  justify-content: center;
 }
 .column1 {
   display: flex;
@@ -23,12 +30,13 @@ main {
   justify-content: center;
   align-items: center;
   padding: 2rem;
-  border: 4px solid white;
+  border: 4px solid grey;
+  border-bottom: 0px;
 }
 
 .column1 ul {
   list-style: none;
-  line-height: 1.4;
+  
   
 }
 
@@ -38,13 +46,20 @@ main {
 
 .column2 {
     display: Grid;
+    align-items: center;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1em;
-    border: 4px solid white;
+    border: 4px solid grey;
+    border-bottom: 0px;
     border-bottom: 2px;
     padding: 2rem;
     line-height: 1.4;
 }
+
+.column2 li {
+  padding: 0.5rem;
+}
+
 main h2 {
   color: rgba(125, 59, 212, 0.74);
   font-weight: bold;
@@ -67,7 +82,7 @@ main h1 {
   max-width: 80px;
   border-radius: 2rem;
   float: left;
-  border: 5px solid white;
+  border: 5px solid grey;
   margin: 0.5rem 0.5rem 0.5rem 0.5rem;
 }
 
@@ -79,7 +94,8 @@ nav {
   text-transform: uppercase;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 550;
-  border-bottom: 8px solid white;
+  
+  background-image: url(images/header_image.jpg);
 }
 nav ul {
   display: flex;
@@ -109,10 +125,14 @@ div {
 }
 
 footer {
-  background-color: #ffffff;
+  background-color: grey;
   padding: 1rem;
   text-align: center;
   color: black;
   font-size: 80%;
   font-style: italic;
+}
+
+header{
+  
 }
